[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.11.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }